[package]
name = "make-rpc-call"
version = "0.1.0"
authors = ["Kinrezc <matt.czernik@gmail.com>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.5"
hyper = "0.13.1"
futures = "0.3.1"
url = "2.1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "0.2.6", features = ["full"] }
